# european-choice

./: CMakeLists.txt  Cargo.toml  README.md  build.rs  post_install_script.sh
.github/workflows/: build.yml
data/: app.desktop.in  resources.xml.in  schemas.xml.in  style.css  ui.xml
resources/: resources.gresource.xml.in  style.css  ui.xml
scripts/: rpm_post_install_script.sh
src/: application.rs  constants.rs  main.rs  ordered_map.rs  populator.rs  prelude.rs  repository.rs  search_engine.rs  ui.rs
src/controllers/: actions.rs  group_scroll.rs  mod.rs  product_activation.rs  product_row_activation.rs  search.rs  window_size.rs
src/models/: catalog.rs  category.rs  country.rs  mod.rs  product.rs
src/widgets/: loading_page.rs  main_page.rs  mod.rs  navigation.rs  overview_page.rs  overview_product_group.rs  overview_product_row.rs  page_content.rs  product_list.rs  product_page.rs  product_row.rs  sidebar.rs  sidebar_category_list.rs  sidebar_country_item.rs  sidebar_country_row.rs  sidebar_primary_list.rs  sidebar_row.rs  sidebar_search_row.rs  window.rs
