[package]
name = "european_alternatives"
description = "European Alternatives"
version = "0.1.0"
edition = "2024"
build = "build.rs"
categories = []
keywords = []
authors = ["Tiago Marques"]

[package.metadata]
id = "pt.timarques.eu_alternatives"
title = "European Alternatives"
prefix = "/pt/timarques/eu_alternatives"

[dependencies]
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
gtk = { package = "gtk4", version = "0.10.0", features = ["v4_8"] }
phf = { version = "0.12.1" }
glib = "0.21.1"
heck = "0.5.0"
const-str = { version = "0.7.0", features = ["case"] }

[build-dependencies]
glib-build-tools = "0.21.0"
scraper = "0.23.1"
phf = { version = "0.12.1" }
phf_codegen = "0.12.1"
anyhow = { version = "1.0.98", features = ["backtrace"] }
minreq = { version = "2.14.0", features = ["https"] }
toml = { version = "0.8.22", default-features = false, features = ["parse"] }
vtracer = "0.6.3"
image = "0.25.6"
md5 = "0.8.0"
heck = "0.5.0"
const-str = { version = "0.7.0", features = ["case"] }
regex = "1.11.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(runtime)'] }
